force-app/main/default/objects/Contact/fields/AddressedName__c.field-meta.xml
<CustomField>
    <fullName>AddressedName__c</fullName>
    <description>This field addresses how we know which name to use in things like automatically generated emails. Where we have a preferred name, this will equal that. Where we don&#39;t, this will equal the first name.</description>
    <formula>IF(ISBLANK(FinServ__PreferredName__c),
FirstName,
FinServ__PreferredName__c)</formula>
    <label>Addressed name</label>
    <type>Text</type>
</CustomField>