force-app/main/default/objects/Contact/fields/AmlIndustry__c.field-meta.xml
<CustomField>
    <fullName>AmlIndustry__c</fullName>
    <description>This field is used as part of the Hubwise AML process to capture industry aligned to Hubwise&#39;s categorisations.</description>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AEROSPACE_DEFENCE</fullName>
                <label>Aerospace and defence</label>
            </value>
            <value>
                <fullName>AGRICULTURE_FORESTRY_FISHING</fullName>
                <label>Agriculture, forestry and fishing</label>
            </value>
            <value>
                <fullName>ARMS_DEALERS_MANUFACTURERS</fullName>
                <label>Arms dealers and manufacturers</label>
            </value>
            <value>
                <fullName>AUTOMOTIVE</fullName>
                <label>Automotive</label>
            </value>
            <value>
                <fullName>BUREAU_DE_CHANGE</fullName>
                <label>Bureau de change</label>
            </value>
            <value>
                <fullName>CHARITIES</fullName>
                <label>Charities</label>
            </value>
            <value>
                <fullName>EDUCATION</fullName>
                <label>Education</label>
            </value>
            <value>
                <fullName>ENGINEERING_CONSTRUCTION</fullName>
                <label>Engineering and construction</label>
            </value>
            <value>
                <fullName>FINANCIAL_SERVICES</fullName>
                <label>Financial services</label>
            </value>
            <value>
                <fullName>GAMBLING_CASINOS</fullName>
                <label>Gambling and casinos</label>
            </value>
            <value>
                <fullName>GOVERNMENT_PUBLIC_SECTOR</fullName>
                <label>Government and public services</label>
            </value>
            <value>
                <fullName>HEALTHCARE</fullName>
                <label>Healthcare</label>
            </value>
            <value>
                <fullName>HOSPITALITY_LEISURE</fullName>
                <label>Hospitality and leisure</label>
            </value>
            <value>
                <fullName>MANUFACTURING</fullName>
                <label>Manufacturing</label>
            </value>
            <value>
                <fullName>MEDIA_ENTERTAINMENT</fullName>
                <label>Media and entertainment</label>
            </value>
            <value>
                <fullName>MINING_MINERALS</fullName>
                <label>Minings &amp; minerals</label>
            </value>
            <value>
                <fullName>OIL_GAS</fullName>
                <label>Oil and gas</label>
            </value>
            <value>
                <fullName>PHARMA_LIFE_SCIENCES</fullName>
                <label>Pharmaceutical and life sciences</label>
            </value>
            <value>
                <fullName>POWER_UTILITIES</fullName>
                <label>Power and utilities</label>
            </value>
            <value>
                <fullName>PRECIOUS_METALS_JEWELLERS</fullName>
                <label>Precious metals and jewellers</label>
            </value>
            <value>
                <fullName>REAL_ESTATE</fullName>
                <label>Real estate</label>
            </value>
            <value>
                <fullName>RETAIL_CONSUMER</fullName>
                <label>Retail and consumer</label>
            </value>
            <value>
                <fullName>RETAIL_CASE_INTENSIVE</fullName>
                <label>Retail cash intensive</label>
            </value>
            <value>
                <fullName>TECHNOLOGY_COMMUNICATIONS</fullName>
                <label>Technology &amp; telecommunications</label>
            </value>
            <value>
                <fullName>TRUSTEE</fullName>
                <label>Trustee</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>