force-app/main/default/objects/Contact/fields/AmlInvestmentReason__c.field-meta.xml
<CustomField>
    <fullName>AmlInvestmentReason__c</fullName>
    <description>This field is used as part of the Hubwise AML process to capture reason for investment aligned to Hubwise&apos;s categorisations.</description>
    <label>Reason for investment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GROW_YOUR_WEALTH</fullName>
                <label>Grow your wealth</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>