force-app/main/default/objects/Contact/fields/AmlOccupation__c.field-meta.xml
<CustomField>
    <fullName>AmlOccupation__c</fullName>
    <description>This field is used as part of the Hubwise AML process to capture occupation aligned to Hubwise&#39;s categorisations.</description>
    <label>Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ARMED_FORCES</fullName>
                <label>Armed forces</label>
            </value>
            <value>
                <fullName>SENIOR_EXECUTIVE</fullName>
                <label>Senior Executive</label>
            </value>
            <value>
                <fullName>PROFESSIONAL</fullName>
                <label>Professional</label>
            </value>
            <value>
                <fullName>SELF_EMPLOYED</fullName>
                <label>Self employed</label>
            </value>
            <value>
                <fullName>STUDENT</fullName>
                <label>Student</label>
            </value>
            <value>
                <fullName>UNEMPLOYED</fullName>
                <label>Unemployed</label>
            </value>
            <value>
                <fullName>RETIREE</fullName>
                <label>Retiree</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>