force-app/main/default/objects/Contact/fields/AmlSalaryRange__c.field-meta.xml
<CustomField>
    <fullName>AmlSalaryRange__c</fullName>
    <description>This field is used as part of the Hubwise AML process to capture salary range aligned to Hubwise&#39;s categorisations.</description>
    <label>Salary range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0_25000</fullName>
                <label>£0 - £25,000</label>
            </value>
            <value>
                <fullName>25000_50000</fullName>
                <label>£25,000 - £50,000</label>
            </value>
            <value>
                <fullName>50000_75000</fullName>
                <label>£50,000 - £75,000</label>
            </value>
            <value>
                <fullName>75000_100000</fullName>
                <label>£75,000 - £100,000</label>
            </value>
            <value>
                <fullName>100000_125000</fullName>
                <label>£100,000 - £125,000</label>
            </value>
            <value>
                <fullName>125000_150000</fullName>
                <label>£125,000 - £150,000</label>
            </value>
            <value>
                <fullName>150000_200000</fullName>
                <label>£150,000 - £200,000</label>
            </value>
            <value>
                <fullName>200000</fullName>
                <label>£200,000 plus</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>