force-app/main/default/objects/Contact/fields/AmlSourceOfFunds__c.field-meta.xml
<CustomField>
    <fullName>AmlSourceOfFunds__c</fullName>
    <description>This field is used as part of the Hubwise AML process to source of funds for investment aligned to Hubwise&#39;s categorisations.</description>
    <label>Source of funds</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EARNINGS</fullName>
                <label>Earnings</label>
            </value>
            <value>
                <fullName>SAVINGS</fullName>
                <label>Savings</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>