force-app/main/default/objects/Contact/fields/ConfigurationReference__c.field-meta.xml
<CustomField>
    <fullName>ConfigurationReference__c</fullName>
    <description>This field stores a reference on the contact that means it can be referenced in configuration and code. Where a value is specified, this contact acts as configuration data. Initially added so that a dedicated contact could store the details for a client email testing account.</description>
    <inlineHelpText>Technical field - do not change the value or field configuration without knowledge of how this works.</inlineHelpText>
    <label>Configuration Reference</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>