force-app/main/default/objects/Contact/fields/FinServ__MaritalStatus__c.field-meta.xml
<CustomField>
    <fullName>FinServ__MaritalStatus__c</fullName>
    <label>Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Cohabiting</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Civil Partnership</fullName>
            </value>
            <value>
                <fullName>Married &amp; Separated</fullName>
            </value>
            <value>
                <fullName>Divorced</fullName>
            </value>
            <value>
                <fullName>Widowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>