force-app/main/default/objects/Contact/fields/Group_Marketing_Consent__c.field-meta.xml
<CustomField>
    <fullName>Group_Marketing_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do we have group marketing consent?</description>
    <label>Group marketing consent</label>
    <type>Checkbox</type>
</CustomField>