force-app/main/default/objects/Contact/fields/In_Good_Health__c.field-meta.xml
<CustomField>
    <fullName>In_Good_Health__c</fullName>
    <description>Indicates the health of the client</description>
    <label>In good health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>