force-app/main/default/objects/Contact/fields/MarketingEmail__c.field-meta.xml
<CustomField>
    <fullName>MarketingEmail__c</fullName>
    <description>Captures whether we have an opt in or out for marketing via email.</description>
    <label>Email marketing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opt in</fullName>
            </value>
            <value>
                <fullName>Opt out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>