force-app/main/default/objects/Contact/fields/Medical_conditions__c.field-meta.xml
<CustomField>
    <fullName>Medical_conditions__c</fullName>
    <label>Medical conditions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>