force-app/main/default/objects/Contact/fields/MoneyPurchaseAnnualAllowanceStatus__c.field-meta.xml
<CustomField>
    <fullName>MoneyPurchaseAnnualAllowanceStatus__c</fullName>
    <description>Records whether or not this person has triggered the money purchase annual allowance.</description>
    <inlineHelpText>Records whether or not this person has triggered the money purchase annual allowance.</inlineHelpText>
    <label>MPAA status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRIGGERED</fullName>
                <label>Triggered</label>
            </value>
            <value>
                <fullName>NOT_TRIGGERED</fullName>
                <label>Not triggered</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>