force-app/main/default/objects/Contact/fields/MoneyPurchaseAnnualAllowanceTriggerNotes__c.field-meta.xml
<CustomField>
    <fullName>MoneyPurchaseAnnualAllowanceTriggerNotes__c</fullName>
    <description>Provides details of the event which triggered the MPAA for this person</description>
    <inlineHelpText>Provides details of the event which triggered the MPAA for this person</inlineHelpText>
    <label>MPAA trigger notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>