force-app/main/default/objects/Contact/fields/National_Insurance_Number__c.field-meta.xml
<CustomField>
    <fullName>National_Insurance_Number__c</fullName>
    <description>Persons&#39; national insurance number</description>
    <label>National insurance number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>