force-app/main/default/objects/Contact/fields/NovaId__c.field-meta.xml
<CustomField>
    <fullName>NovaId__c</fullName>
    <description>Unique external ID for account</description>
    <externalId>true</externalId>
    <label>NOVA ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>