force-app/main/default/objects/Contact/fields/OctopusMoneyRecord__c.field-meta.xml
<CustomField>
    <fullName>OctopusMoneyRecord__c</fullName>
    <description>Formula field for the casesafe ID of the linked group / Octopus Money account</description>
    <formula>IF(ISPICKVAL( Account.Household_Lookup__r.GroupCompany__c , &quot;OM&quot;), CASESAFEID(Account.Household_Lookup__c), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OM record</label>
    <type>Text</type>
</CustomField>