force-app/main/default/objects/Contact/fields/PipedriveID__c.field-meta.xml
<CustomField>
    <fullName>PipedriveID__c</fullName>
    <externalId>true</externalId>
    <label>PipedriveID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>