force-app/main/default/objects/Contact/fields/Role_in_primary_household__c.field-meta.xml
<CustomField>
    <fullName>Role_in_primary_household__c</fullName>
    <description>Formula field to show role in primary household on contact</description>
    <formula>TEXT(Account.FinServ__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role in primary household</label>
    <type>Text</type>
</CustomField>