force-app/main/default/objects/Contact/fields/Secondary_Email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Email__c</fullName>
    <description>Additional email for person</description>
    <label>Secondary email</label>
    <type>Email</type>
</CustomField>