force-app/main/default/objects/Contact/fields/ServiceContactPreferences__c.field-meta.xml
<CustomField>
    <fullName>ServiceContactPreferences__c</fullName>
    <description>Used to capture whether someone should receive all emails we send or only the essential ones.</description>
    <label>Service contact preferences</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All emails</fullName>
                <default>true</default>
                <label>All emails</label>
            </value>
            <value>
                <fullName>Essential only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>