force-app/main/default/objects/Contact/fields/Smoked_in_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Smoked_in_Last_12_Months__c</fullName>
    <description>Has the person smoked in the last 12 months</description>
    <label>Smoked in last 12 months</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>