force-app/main/default/objects/Contact/fields/StatusWealth__c.field-meta.xml
<CustomField>
    <fullName>StatusWealth__c</fullName>
    <description>The status of this person with the wealth side of the business.</description>
    <label>Wealth status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>StatusWealth</valueSetName>
    </valueSet>
</CustomField>