force-app/main/default/objects/Contact/fields/VideoAskRespondentId__c.field-meta.xml
<CustomField>
    <fullName>VideoAskRespondentId__c</fullName>
    <description>The unique ID of the respondent (person) in VideoAsk.</description>
    <externalId>true</externalId>
    <label>VideoAsk respondent ID</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>