force-app/main/default/objects/Contact/fields/Wealth_Marketing_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Wealth_Marketing_Opt_In__c</fullName>
    <label>Wealth Marketing Opt In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>