force-app/main/default/objects/Contact/fields/Website_Forms__c.field-meta.xml
<CustomField>
    <fullName>Website_Forms__c</fullName>
    <description>Marketing tracking field to indicate which form the lead came from</description>
    <label>Website forms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Website - Contact Form</fullName>
            </value>
            <value>
                <fullName>Website - Health Check</fullName>
            </value>
            <value>
                <fullName>Website - Health Check &amp; Contact Request</fullName>
            </value>
            <value>
                <fullName>Website - Brochure</fullName>
            </value>
            <value>
                <fullName>Website - Advice</fullName>
            </value>
            <value>
                <fullName>NHS Pension Guide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>