force-app/main/default/objects/Contact/validationRules/AricasAccountsMustBePurchased.validationRule-meta.xml
<ValidationRule>
    <fullName>AricasAccountsMustBePurchased</fullName>
    <active>false</active>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c 
&amp;&amp;
Owner.Id = &quot;0054J000005ZzIiQAK&quot;
&amp;&amp;
IsPersonAccount = TRUE
&amp;&amp;
NOT( ISPICKVAL( LeadSource, &quot;Purchased List&quot; ) )</errorConditionFormula>
    <errorMessage>The account and lead source must both be &quot;purchased list&quot;.</errorMessage>
</ValidationRule>