force-app/main/default/objects/Contact/validationRules/FinServ__ContactCannotBeAssociatedToHousehold.validationRule-meta.xml
<ValidationRule>
    <fullName>FinServ__ContactCannotBeAssociatedToHousehold</fullName>
    <active>false</active>
    <description>Check to see if contact is associated directly to household</description>
    <errorConditionFormula>Account.RecordType.DeveloperName=&#39;IndustriesHousehold&#39;</errorConditionFormula>
    <errorMessage>Can&#39;t associate a lead or contact to a household account.</errorMessage>
</ValidationRule>