force-app/main/default/objects/Contact/validationRules/MustBeLinkeToPersonAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>MustBeLinkeToPersonAccount</fullName>
    <active>true</active>
    <description>Ensures that standalone contacts - not linked to person accounts - are not created as these are not yet supported.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c
&amp;&amp;
NOT( IsPersonAccount )
&amp;&amp;
ISNEW()</errorConditionFormula>
    <errorMessage>You cannot create contacts like this. Instead, please create a person account.</errorMessage>
</ValidationRule>